lab1/Test/L1-A-10-89.output
Error Type A at Line 15
Error Type B at Line 23
Error Type B at Line 24
Error Type B at Line 34
Error Type B at Line 42
