lab1/Test/L1-A-10-89.cmm
int Pse5oS1azb7c9X ( ) {
  v1pVX = dYLOryFwaWuVOZoBEa && H <= Pa * - ! - GnFXSmZ1U21q7f 
    [ Dfq61QtRZo || N0 > HpPei - u4qyzlEZxvuIDHmMSoRf 
    ( MA , Lox4Mo_HJR4J = H58aWCJR0UjFnH != sLX * ! VKRu5Qvm5p 
    ( F3J2uGd_ocpun || ( qC < ( eHfHz >= Amfb0Jr ) == 
    ! ! DMmC0nE7757w8Rwe6Cr . RCcBfU9hsip_p / 382853720 
    + - hABfYfZhClNGafm ) ) ) . EEBEfH5xb + 1407031060.537939092 
    ] / ! vCJ65yPVxGYQVDffDSr ( ) ;
}
struct htc53 IxE2g 
;
float ;
struct {
  int xWuJIVWas2vAtpV ;
:}BS_G0T1hC95La3DqbD4X ( int gbRYlcDZpwu ) {
  int Kyt , iz_ [ 433448813 ] = w3XIB7kWpkhBQlyS ;
}
int gRB4UHxyP , eN2KeS6q8yOjs2g 

;
struct wpIhnrtXO {
  int YFgM7h39N2VjfKtU ;
|| };
int * ;
int ;
int rxixTXTnNKf8JT8 ( ) {
}
int kltNGzRago5g ( int c0Gq6gQEW4Zbdy8 , int xg5A 
  ) {
}
int ;
int iNhkXQjTEt73MhY5 ( ) {
  if ( EKDPGf1c6eAJBebN )   jav ;
else   while ( YBv9 ) >=   eXf ;


  if ( RD79kSbp04erb ) {
  }else   if ( U5ElVspxnStK5mdN )   return OKJLgK_2wsMPWv4PlNN 
    ;


>= }
